--- a/index.html
+++ b/index.html
@@ -9,64 +9,64 @@
 <body>
     <header>
         <div class="header-logo">
-            <h3 id="header-logo-text"></h3>
+            <h3 id="header-logo-text">Header Logo</h3>
         </div>
         <div class="header-links">
-            <p class="header-link"></p>
-            <p class="header-link"></p>
-            <p class="header-link"></p>
+            <p class="header-link">header link one</p>
+            <p class="header-link">header link two</p>
+            <p class="header-link">header link three</p>
         </div>
     </header>
     <section class="hero">
         <div class="hero-left">
-            <h1 id="hero-title"></h1>
-            <p id="hero-text"></p>
-            <button class="button" id="hero-button"></button>
+            <h1 id="hero-title">This website is awesome</h1>
+            <p id="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast.</p>
+            <button id="hero-button">Sign up</button>
         </div>
         <div class="hero-right">
-            <img src="" alt="">
+            <img id="hero-img" src="" alt="this is a placeholder">
         </div>
     </section>
     <section class="info">
         <div class="info-title">
-            <h2 id="info-title-text"></h2>
+            <h2 id="info-title-text">Some random information</h2>
         </div>
         <div class="info-blocks">
             <div class="info-block">
                 <img src="" alt="">
-                <p></p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info-block">
                 <img src="" alt="">
-                <p></p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info-block">
                 <img src="" alt="">
-                <p></p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info-block">
                 <img src="" alt="">
-                <p></p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </section>
     <section class="quote">
-        <h1 id="big-quote-text"></h1>
-        <h3 id="big-quote-author"></h3>
+        <h1 id="big-quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h1>
+        <h3 id="big-quote-author">-Thor, God of Thunder</h3>
     </section>
     <section class="action">
         <div class="action-box">
             <div class="action-box-left">
-                <h3 class="action-box-text-bold"></h3>
-                <p class="action-box-text-regular"></p>
+                <h3 class="action-box-text-bold">Call to action! It's time!</h3>
+                <p class="action-box-text-regular">Sign up for our product by clicking that button right over there!</p>
             </div>
             <div class="action-box-right">
-                <button id="action-button"></button>
+                <button id="action-button">Sign up</button>
             </div>
         </div>
     </section>
     <footer>
-        <p id="footer-text"></p>
+        <p id="footer-text">Copyright &copy; The Odin Project 2021</p>
     </footer>
 </body>
 </html>
