Add new color classes for each section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <title>Landing Page</title>
 </head>
 <body>
-    <header>
+    <header class="dark-blue">
         <div class="header-logo">
             <h3 id="header-logo-text">Header Logo</h3>
         </div>
@@ -17,7 +19,7 @@
             <p class="header-link">header link three</p>
         </div>
     </header>
-    <section class="hero">
+    <section class="hero dark-blue">
         <div class="hero-left">
             <h1 id="hero-title">This website is awesome</h1>
             <p id="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast.</p>
@@ -27,7 +29,7 @@
             <img id="hero-img" src="" alt="this is a placeholder">
         </div>
     </section>
-    <section class="info">
+    <section class="info white">
         <div class="info-title">
             <h2 id="info-title-text">Some random information</h2>
         </div>
@@ -50,11 +52,11 @@
             </div>
         </div>
     </section>
-    <section class="quote">
+    <section class="quote gray">
         <h1 id="big-quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h1>
         <h3 id="big-quote-author">-Thor, God of Thunder</h3>
     </section>
-    <section class="action">
+    <section class="action white">
         <div class="action-box">
             <div class="action-box-left">
                 <h3 class="action-box-text-bold">Call to action! It's time!</h3>
@@ -66,7 +68,7 @@
         </div>
     </section>
     <footer>
-        <p id="footer-text">Copyright &copy; The Odin Project 2021</p>
+        <p class="dark-blue" id="footer-text">Copyright &copy; The Odin Project 2021</p>
     </footer>
 </body>
 </html>
